# kwin-effect-shaders

./: .gitignore  CMakeLists.txt  README.md  install.sh  plugin.cpp  shaders.cpp  shaders.desktop  shaders.h  shaders.kcfg  shaders.qrc  shadersConfig.desktop  shaders_config.cpp  shaders_config.h  shaders_config.ui  shadersconfig.kcfgc
data/1.40/: shaders.frag
src/: CMakeLists.txt  Shaders.cpp  Shaders.h  ShadersConfig.kcfgc  ShadersUI.cpp  ShadersUI.h  ShadersUI.ui  metadata.json  options.kcfg  plugin.cc
src/kcm/: CMakeLists.txt  ShadersEffectKCM.cc  ShadersEffectKCM.h  ShadersEffectKCM.ui  metadata.json  plugin.cc
src/shaders/: 1_settings.frag  1_settings.glsl  2_main.frag  2_main.vert  AMD_CAS.frag  AdaptiveSharpen.frag  AdvancedCartoon.frag  AdvancedCartoon.vert  DPX.frag  Deband.frag  FXAA3.frag  FakeHDR.frag  FastGaussBlur5.frag  FastSharpen.frag  FilmNoise.frag  GaussBlurH.frag  GaussBlurV.frag  GrayScale.frag  GrayscaleYUV.frag  Levels.frag  LiftGammaGain.frag  NaturalVision.frag  NvidiaDLS.frag  Sepia.frag  Technicolor1.frag  Technicolor2.frag  Tonemap.frag  Vibrance.frag  shaders.frag  shaders.vert
